--- a/bower.json
+++ b/bower.json
@@ -1,17 +1,18 @@
 {
   "name": "ext-theme-oep",
-  "version": "1.0.0",
+  "version": "1.6.0",
+  "homepage": "https://github.com/Sundsvallskommun/ext-theme-oep",
   "authors": [
     "Sundsvalls Kommun"
   ],
   "description": "ExtJS theme for Open ePlatform and Open eMap",
-  "main": "dist/css/oepTheme-all.css",
+  "main": "build/resources/osynlig-oep-theme-all.css",
   "license": "CC0 1.0 Universal",
-  "homepage": "https://github.com/Sundsvallskommun/ext-theme-oep",
   "private": true,
   "ignore": [
     "node_modules",
     "bower_components",
-    "release"
+    "test",
+    "tests"
   ]
 }
